tests/cases/errors/parse/if_missing_paren.hc
//@ error: expected `(`
U0 Main()
{
  if 1 { }
}
